2011-10-24 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : fixed handling of '<' and '>' in save_dot + additional arg to keep full node label

2011-10-21 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : added mutex for MRNet callbacks

2011-10-07 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : process listing fix to handle unexpected output

2011-09-26 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.[C,h] : Assume shared app nodes are accessible (don't call checkNodeAccess)

2011-09-23 Gregory L. Lee <lee218@llnl.gov>
	* : fixed errors reported by Intel's Static Security Checker tool

2011-08-19 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : disable failure recovery for CRAYXT

2011-08-02 Gregory L. Lee <lee218@llnl.gov>
	* config/x_ac_mrnet : added test for MRNet 3.1

2011-07-19 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py scripts/STATGUI.py : use re to search for node text and to filter RM
	* doc/src/* : updated figures and documentation

2011-07-13 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : When -A specified, don't use nodes.txt config file
	* scripts/STAT.in : set -A by default
	* scripts/STATGUI.py : set "Share App Nodes" to true by default
	* doc/src/stat_preferences.sgml : Updated note about nodes.txt

2011-06-21 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/stat_environment_variables.sgml : Clarified various paths to be full paths to files, not the containing directories

2011-06-17 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : use new Cray attributes in MRNet 3.1

2011-06-02 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STAT.in, scripts/STATGUI.in : set LMON_FE_ENGINE_TIMEOUT 
	* configure.ac : added getrlimit and setrlimit tests

2011-06-01 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py, scripts/STATGUI.py : added ability to search by hosts. Consolodated search by hosts, ranks, text into one button.

2011-05-26 Gregory L. Lee <lee218@llnl.gov>