@@ -1,3 +1,9 @@
+2011-11-01 Gregory L. Lee <lee218@llnl.gov>
+	* scripts/STATview.py : fixed label handling (don't restore to full path) in "on_original_graph" function
+	* src/STAT_BackEnd.C : fixed STATBench handling of path
+	* src/STATBench.C : re-enabled iters option
+	* src/STAT_FilterDefinitions.C : enclose calls to mrn_printf within MRNET31 macro
+
 2011-10-24 Gregory L. Lee <lee218@llnl.gov>
 	* scripts/STATview.py : fixed handling of '<' and '>' in save_dot + additional arg to keep full node label
 
